<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TW4A</string>
    <string name="not_implemented">Not implemented yet</string>

    <!-- generic words -->
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="settings">Settings</string>
    <string name="set">Set</string>
    <string name="none">None</string>
    <string name="status">Status</string>
    <string name="synchronization">Synchronization</string>
    <string name="private_key">Private key</string>
    <string name="certificate_request">Certificate request</string>
    <string name="certificate">Certificate</string>
    <string name="host_address">Host address</string>
    <string name="addr_port">address:port</string>
    <string name="credentials">Credentials</string>

    <!-- application specific -->
    <string name="configure_error_title">Could not configure application!</string>
    <string name="configure_error_description">Make sure you have Internet access and swype down to retry.</string>
    <string name="add_task_dialog_header">New Task</string>
    <string name="edit_task_dialog_header">Edit Task</string>
    <string name="list_empty">No pending tasks</string>
    <string name="export_internal_data">Export internal data</string>
    <string name="host_address_summary">Address of Taskserver with a port number</string>
    <string name="credentials_summary">Server specyfic information identyfing the user</string>

    <string-array name="taskwarrior_sync_states">
        <item>Off</item>
        <item>Prepared</item>
        <item>Failed</item>
        <item>On</item>
    </string-array>
</resources>

